Header and Intro

--- a/index.html
+++ b/index.html
@@ -28,10 +28,42 @@
 </head>
 
 <body>
-    <!-- HEADER -->
-    <div id='header'></div>
+    <div id='header'>
+        <div class='container'>
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top py-lg-0">
+                <a class="navbar-brand" href="/index.html">
+                    <img src="/images/studyspacelogo.png" width=150px height= 150px alt="logo" class="logo-img d-inline-block">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link" href="#">about</a>
+                    <a class="nav-item nav-link" href="#">features</a>
+                    <a class="nav-item nav-link" href="#">team</a>
+                </div>
+                </div>
+            </nav>
+        </div>
+    </div>
 
-    <div id='page'></div>
+    <div id='page'>
+        <div class='container'>
+            
+            <div class='col-lg-6'>
+                <h1>StudySpace</h1>
+                <p>ipsum dolor sit amet, consectetur adipiscing elit. Donec in tristique diam. Integer rutrum f
+                    eugiat massa a scelerisque. Etiam et felis fermentum, vestibulum enim quis, bibendum nisl. Vivamus nulla dolor, 
+                    iaculis a ultricies quis, congue quis lectus. Praesent viverra vel nulla et vestibulum. Donec elementum et velit quis auctor. Ali
+                </p>
+                <a class='btn btn-primary' href="" role='button'>Download Chrome Extension</a>
+            </div>
+            <div class='col-lg-6'>
+
+            </div>
+        </div>
+    </div>
 
     <div id='footer'></div>
     
