--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="https://kit.fontawesome.com/72d227a617.js" SameSite="None; Secure" crossorigin="anonymous"></script>
 	
 	<!-- Website CSS -->
-    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
-    <link rel="stylesheet" type="text/css" href="/styles/media.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/media.css">
 	
 	<title>Study Space</title>
 	
