--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div id='header'>
         <div class='container'>
             <nav class="navbar navbar-expand-lg navbar-light fixed-top py-lg-0">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/images/studyspacelogo.png" width=150px height= 150px alt="logo" class="logo-img d-inline-block">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/studyspacelogo.png" width=150px height= 150px alt="logo" class="logo-img d-inline-block">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -82,6 +82,6 @@
         crossorigin="anonymous"></script>
 
     <!-- Scripts -->
-    <script type="text/javascript" src="/scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
 </body>
 
