Update Team Info

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     <div class="image"><img src="images/lauryne.jpeg" class="fit-image"></div>
                     <p class="mt-2 text-center image-name">Lauryne Assa
                         <br>
-                        <a class="socials" href="" target='_blank'><i class="fab fa-linkedin fa-lg"></i></a>
-                        <a class="socials" href="" target='_blank'><i class="fab fa-github-square fa-lg"></i></a>
+                        <a class="socials" href="https://www.linkedin.com/in/lauryne-assa/" target='_blank'><i class="fab fa-linkedin fa-lg"></i></a>
+                        <a class="socials" href="https://github.com/lauryneada" target='_blank'><i class="fab fa-github-square fa-lg"></i></a>
                     </p>
 
                 </div>
@@ -140,11 +140,11 @@
                 </div>
 
                 <div class="col-md-3">
-                    <div class="image"><img src="images/" class="fit-image"></div>
+                    <div class="image"><img src="images/shayan.jpeg" class="fit-image"></div>
                     <p class="mt-2 text-center image-name">Shayan Rahman
                         <br>
-                        <a class="socials" href="" target='_blank'><i class="fab fa-linkedin fa-lg"></i></a>
-                        <a class="socials" href="" target='_blank'><i class="fab fa-github-square fa-lg"></i></a>
+                        <a class="socials" href="https://www.linkedin.com/in/shayan-rahman-89a414218/" target='_blank'><i class="fab fa-linkedin fa-lg"></i></a>
+                        <a class="socials" href="https://github.com/Hagoo21" target='_blank'><i class="fab fa-github-square fa-lg"></i></a>
                     </p>
                 </div>
             </div>
