--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
             <div class='row section'>
                 <div class='col-md-6'>
                     <h1 id='intro'>StudySpace</h1>
-                    <p>ipsum dolor sit amet, consectetur adipiscing elit. Donec in tristique diam. Integer rutrum f
-                        eugiat massa a scelerisque. Etiam et felis fermentum, vestibulum enim quis, bibendum nisl. Vivamus nulla dolor, 
-                        iaculis a ultricies quis, congue quis lectus. Praesent viverra vel nulla et vestibulum. Donec elementum et velit quis auctor. Ali
+                    <p>A platform that aids students in studying. StudySpace provides students with an all-in-one approach,
+                        the ability to manage to do lists, listen to music, set timers, and discuss 
+                        with their peers, all in one space.
+                    </p>
+                    <p>
+                        Avoid the clutter - chose <b>StudySpace</b>
                     </p>
 
                     <a class='btn btn-primary btn-lg' href="" role='button'>Download Chrome Extension</a>
         
                 </div>
-                <div class='col-md-4 offset-2 '>
-                    <p>*Insert pic of extension*</p>
+                <div class='col-md-4 extension justify-content-center'>
+                    <div class="picture"><img src="images/extension.png"></div>
                 </div>
                 <a name='about'></a>
             </div>
@@ -74,18 +77,27 @@
                 <div class='col-md-4'>
                     <p>*Insert pic of extension*</p>
                 </div>
-                <div class='col-md-6 offset-2 about'>
+                <div class='col-md-7 offset-1 about'>
                     <h1>About</h1>
-                    <p>ipsum dolor sit amet, consectetur adipiscing elit. Donec in tristique diam. Integer rutrum f
-                        eugiat massa a scelerisque. Etiam et felis fermentum, vestibulum enim quis, bibendum nisl. Vivamus nulla dolor, 
-                        iaculis a ultricies quis, congue quis lectus. Praesent viverra vel nulla et vestibulum. Donec elementum et velit quis auctor. Ali
+                    <p>
+                        Think back to the countless times you have wished <b>“Why couldn’t all of my studying and school assignments 
+                        deadlines be in one place?”</b> or <b>“How can I study more effectively with my time without getting distracted 
+                        by switching through apps”? </b>
                     </p>
+                    <br>
+                    <p>This is why we - as students - decided to create a Chrome extension to solve this problem.</p>    
+
+
+                   
                 </div>
                 <a name='features'></a>
             </div>
 
             <div class='row features'>
                 <h1>Features</h1>
+                <p>Upon opening up the extension, you will see many features including, a digital <b>To-do List</b> to manage and keep track of your homework. 
+                    The <b>Music Manager</b> helps quickly control the music you want played while you study and will connect to your Spotify, Apple Music, or Google Music account.
+                    The ability to change whatever <b>Wallpaper</b> you want as a background to study & finally a <b>Productivity Mode</b> which allows you to block applications.</p>
             </div>
             <div class='row justify-content-center section columns'>
                 <div class=col-md-3>
@@ -107,6 +119,7 @@
                 <a name='team'></a>
             </div>
 
+            <div id='team'>
             <div class='row team'>
                 <h1>Team</h1>
             </div>
@@ -147,6 +160,7 @@
                         <a class="socials" href="https://github.com/Hagoo21" target='_blank'><i class="fab fa-github-square fa-lg"></i></a>
                     </p>
                 </div>
+            </div>
             </div>
         </div>
     </div>
