--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 	
 	<!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/72d227a617.js" SameSite="None; Secure" crossorigin="anonymous"></script>
+
+    <!-- Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 	
 	<!-- Website CSS -->
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
