Updates -Next features -Extension pic fits in margin

--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
                     <br>
                     <p>This is why we - as students - decided to create a Chrome extension to solve this problem.</p>    
                 </div>
-                <a name='features'></a>
+            <a name='features'></a>
             </div>
-
+            
             <div class='row features' class='fade'>
                 <h1>Features</h1>
                 <p>Upon opening up the extension, you will see many features including, a digital <b>To-do List</b> to manage and keep track of your homework. 
                     The <b>Music Manager</b> helps quickly control the music you want played while you study and will connect to your Spotify, Apple Music, or Google Music account.
                     The ability to change whatever <b>Wallpaper</b> you want as a background to study & finally a <b>Productivity Mode</b> which allows you to block applications.</p>
             </div>
-            <div class='row justify-content-center section columns' class='fade'>
+            <div class='row justify-content-center  columns' class='fade'>
                 <div class=col-md-3>
                     <p>To-Do List</p>
                     <p>*Picture*</p>
@@ -120,6 +120,13 @@
                     <p>*Picture*</p>
                 </div>
                 <a name='team'></a>
+            </div>
+            <br>
+            <br>
+            <div class='row features section' class='fade'>
+                <p>Some features we want to add in next updates include: <b>Study Together</b> which would offer a shared room with a chatbox
+                to study with friends, <b>Pomodoro</b> to allow users to structure their studying and plan breaks. Finally, expanding
+                the Chrome Extension to a <b>Web Application</b> making it available for all browsers.</p>
             </div>
 
             <div id='team'>
