--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         with their peers, all in one space.
                     </p>
                     <p>
-                        Avoid the clutter - chose <b>StudySpace</b>
+                        Avoid the clutter - choose <b>StudySpace</b>
                     </p>
 
                     <a class='btn btn-primary btn-lg' href="" role='button'>Download Chrome Extension</a>
@@ -91,7 +91,11 @@
                         by switching through apps”? </b>
                     </p>
                     <br>
-                    <p>This is why we - as students - decided to create a Chrome extension to solve this problem.</p>    
+                    <p>This is why we decided to create a Chrome extension to solve this problem.
+                        <br>Nowadays there are so many different productivity apps you can find. But in practice trying to use all of them doesn't 
+                        maximize productivity, it wastes time. Wishing there was a simple place where all to-do lists from homework & assignments, 
+                        timers and music was stored is what birthed StudySpace.
+                    </p>    
                 </div>
             <a name='features'></a>
             </div>
