--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="Study Space"> 
+        content="YourSpace"> 
 	
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
@@ -38,7 +38,7 @@
         <div class='container'>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-lg-0">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/studyspacelogo.png" width=150px height=150px alt="logo" class="logo-img d-inline-block">
+                    <img src="images/yourspacelogo.png" width=80px height=80px alt="logo" class="logo-img d-inline-block">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -59,13 +59,13 @@
 
             <div class='row section'>
                 <div class='col-md-6' class='fade'>
-                    <h1 id='intro'>StudySpace</h1>
-                    <p>A convenient and portable online tool provides students the ability to be organized and study more effectively. StudySpace provides students with an all-in-one approach,
+                    <h1 id='intro'>YourSpace</h1>
+                    <p>A convenient and portable online tool provides students the ability to be organized and study more effectively. YourSpace provides students with an all-in-one approach,
                         the ability to manage to do lists, listen to music, set timers, and discuss 
                         with their peers, all in one space.
                     </p>
                     <p>
-                        Avoid the clutter - choose <b>StudySpace</b>
+                        Avoid the clutter - choose <b>YourSpace</b>
                     </p>
 
                     <a class='btn btn-primary btn-lg' href="" role='button'>Download Chrome Extension</a>
@@ -95,7 +95,7 @@
                     <p>This is why we decided to create a Chrome extension to solve this problem.
                         Nowadays there are so many different productivity apps you can find. But in practice trying to use all of them doesn't 
                         maximize productivity, it wastes time. Wishing there was a simple place where all to-do lists from homework & assignments, 
-                        timers and music was stored is what birthed StudySpace.
+                        timers and music was stored is what birthed YourSpace.
                     </p>    
                 </div>
             <a name='features'></a>
