--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="stylesheet" type="text/css" href="styles/media.css">
 	
-	<title>Study Space</title>
+	<title>YourSpace</title>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
 	        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
